@@ -1,3 +1,10 @@
+2013-09-13  Richard Sandiford  <richard@codesourcery.com>
+
+	* locale/programs/ld-ctype.c (find_idx): Use uint32_t in
+	prototype.
+	(ctype_startup): Use uint32_t in cast and sizeof for
+	ctype->charnames.
+
 2013-09-11  Jia Liu  <proljc@gmail.com>
 
 	* sunrpc/rpc/types.h [__APPLE_CC__]: Define __u_char_defined and
